
syntax = "proto3";


package pb;
option go_package = "./;pb";




message MessageList{
  map<uint64,Message>List=1;
}
message Message {
  string Topic = 1;
  map<string,string>Headers=2;
  string Key =3;
  bytes  Value=4;
  int64  TimesTamp=5; //时间戳
  bool IsConsume=6; //是否消费
  bool IsWrite=7; //是否写入硬盘
  string Producer=8; //生产者
  int64 Sequence=9; //序列号
  string Uuid=10;//消息编号
}

message RespSend{
  int64 Sequence=1; //序列号
  bool  IsConsume=2;//是否消费
}


